--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,32 @@
 # Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 title: Thilo Muth (PhD)
-author:
-  name: Thilo Muth  
-description: Head of Division of the Data Competence Center at the Robert Koch Institute, Berlin, Germany
+description: >- # this means to ignore newlines until "baseurl:"
+  Personal site of Thilo Muth - Head of the Data Competence Center at the Robert Koch Institute in Berlin
+  
+  
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+bluesky_username: DrMuth
+github_username: thilus 
 
 # Build settings
-remote_theme: jekyll/minima
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
