--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Thilo Muth (PhD)
+title: Personal site of Thilo Muth
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal site of Thilo Muth - Head of the Data Competence Center at the Robert Koch Institute in Berlin
+  Head of the Data Competence Center at the Robert Koch Institute in Berlin
   
   
 baseurl: "" # the subpath of your site, e.g. /blog
