--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Personal site of Thilo Muth
+title: Thilo Muth
 description: >- # this means to ignore newlines until "baseurl:"
-  Head of the Data Competence Center at the Robert Koch Institute in Berlin
+  Head of the Data Competence Center @ RKI
   
   
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-bluesky_username: DrMuth
 github_username: thilus 
 
 # Build settings
